--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 09:44:00 AM</p>
+    <p class="lastupdate">09/20/2020 09:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,27 +50,27 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">64.6&#176;F</td>
+        <td class="data">65.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">64.6&#176;F</td>
+        <td class="data">65.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">64.6&#176;F</td>
+        <td class="data">65.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.4&#176;F</td>
+        <td class="data">53.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">67%</td>
+        <td class="data">66%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.911 inHg (0.028)</td>
+        <td class="data">29.910 inHg (0.024)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.5&#176;F</td>
+        <td class="data">74.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">45%</td>
+        <td class="data">44%</td>
       </tr>
     </tbody>
   </table>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="09:43:41 AM">
-            64.6</span><br/>
+          <span title="09:48:27 AM">
+            65.2</span><br/>
           <span title="07:14:52 AM">
             51.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:43:41 AM (Sunday)">
-            64.6</span><br/>
+          <span title="09:48:27 AM (Sunday)">
+            65.2</span><br/>
           <span title="07:14:52 AM (Sunday)">
             51.3</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="09:43:41 AM" class="hival">
-            64.6</span>
+          <span title="09:48:27 AM" class="hival">
+            65.2</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:43:41 AM (Sunday)" class="hival">
-            64.6</span>
+          <span title="09:48:27 AM (Sunday)" class="hival">
+            65.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="06:15:22 AM">
             85</span><br/>
-          <span title="09:42:47 AM">
-            67</span>
+          <span title="09:46:13 AM">
+            66</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:15:22 AM (Sunday)">
             85</span><br/>
-          <span title="09:42:47 AM (Sunday)">
-            67</span>
+          <span title="09:46:13 AM (Sunday)">
+            66</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/14/2020 07:40:53 AM">
@@ -303,14 +303,14 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="09:32:01 AM">
-            29.911</span><br/>
+          <span title="09:45:01 AM">
+            29.913</span><br/>
           <span title="04:11:00 AM">
             29.863</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:32:01 AM (Sunday)">
-            29.911</span><br/>
+          <span title="09:45:01 AM (Sunday)">
+            29.913</span><br/>
           <span title="04:11:00 AM (Sunday)">
             29.863</span>
         </td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          2
+          3
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          2
+          3
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">30%</td>
+      <td class="data">60%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">0 days, 1 hour, 57 minutes</td>
+      <td class="data">0 days, 2 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">0 days, 1 hour, 57 minutes</td>
+      <td class="data">0 days, 2 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
