--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 09:54:00 AM</p>
+    <p class="lastupdate">09/20/2020 09:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">66.0&#176;F</td>
+        <td class="data">66.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">66.0&#176;F</td>
+        <td class="data">66.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">66.0&#176;F</td>
+        <td class="data">66.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.5&#176;F</td>
+        <td class="data">54.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.909 inHg (0.018)</td>
+        <td class="data">29.909 inHg (0.017)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NE (45&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.7&#176;F</td>
+        <td class="data">74.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">44%</td>
+        <td class="data">45%</td>
       </tr>
     </tbody>
   </table>
@@ -119,7 +119,7 @@
         <tr>
           <td class="label">Moon Phase</td>
           <td class="data">Waxing crescent<br/>
-            10%</td>
+            11%</td>
         </tr>
       </table>
     </div>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="09:53:25 AM">
-            66.0</span><br/>
+          <span title="09:58:33 AM">
+            66.7</span><br/>
           <span title="07:14:52 AM">
             51.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:53:25 AM (Sunday)">
-            66.0</span><br/>
+          <span title="09:58:33 AM (Sunday)">
+            66.7</span><br/>
           <span title="07:14:52 AM (Sunday)">
             51.3</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="09:53:25 AM" class="hival">
-            66.0</span>
+          <span title="09:58:33 AM" class="hival">
+            66.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:53:25 AM (Sunday)" class="hival">
-            66.0</span>
+          <span title="09:58:33 AM (Sunday)" class="hival">
+            66.7</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">0 days, 2 hours, 7 minutes</td>
+      <td class="data">0 days, 2 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">0 days, 2 hours, 7 minutes</td>
+      <td class="data">0 days, 2 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
