--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 09:59:00 AM</p>
+    <p class="lastupdate">09/20/2020 10:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">66.7&#176;F</td>
+        <td class="data">67.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">66.7&#176;F</td>
+        <td class="data">67.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">66.7&#176;F</td>
+        <td class="data">67.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.1&#176;F</td>
+        <td class="data">54.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">64%</td>
+        <td class="data">63%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.909 inHg (0.017)</td>
+        <td class="data">29.909 inHg (0.019)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.8&#176;F</td>
+        <td class="data">74.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">45%</td>
+        <td class="data">44%</td>
       </tr>
     </tbody>
   </table>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="09:58:33 AM">
-            66.7</span><br/>
+          <span title="10:04:00 AM">
+            67.3</span><br/>
           <span title="07:14:52 AM">
             51.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:58:33 AM (Sunday)">
-            66.7</span><br/>
+          <span title="10:04:00 AM (Sunday)">
+            67.3</span><br/>
           <span title="07:14:52 AM (Sunday)">
             51.3</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="09:58:33 AM" class="hival">
-            66.7</span>
+          <span title="10:04:00 AM" class="hival">
+            67.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:58:33 AM (Sunday)" class="hival">
-            66.7</span>
+          <span title="10:04:00 AM (Sunday)" class="hival">
+            67.3</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="06:15:22 AM">
             85</span><br/>
-          <span title="09:53:53 AM">
-            64</span>
+          <span title="09:59:11 AM">
+            63</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:15:22 AM (Sunday)">
             85</span><br/>
-          <span title="09:53:53 AM (Sunday)">
-            64</span>
+          <span title="09:59:11 AM (Sunday)">
+            63</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/14/2020 07:40:53 AM">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">56%</td>
+      <td class="data">64%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">0 days, 2 hours, 12 minutes</td>
+      <td class="data">0 days, 2 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">0 days, 2 hours, 12 minutes</td>
+      <td class="data">0 days, 2 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
