--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 10:04:00 AM</p>
+    <p class="lastupdate">09/20/2020 10:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">67.3&#176;F</td>
+        <td class="data">67.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">67.3&#176;F</td>
+        <td class="data">67.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">67.3&#176;F</td>
+        <td class="data">67.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -66,15 +66,15 @@
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">63%</td>
+        <td class="data">62%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.909 inHg (0.019)</td>
+        <td class="data">29.907 inHg (0.012)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NE (45&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.9&#176;F</td>
+        <td class="data">75.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:04:00 AM">
-            67.3</span><br/>
+          <span title="10:08:17 AM">
+            67.8</span><br/>
           <span title="07:14:52 AM">
             51.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:04:00 AM (Sunday)">
-            67.3</span><br/>
+          <span title="10:08:17 AM (Sunday)">
+            67.8</span><br/>
           <span title="07:14:52 AM (Sunday)">
             51.3</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:04:00 AM" class="hival">
-            67.3</span>
+          <span title="10:08:17 AM" class="hival">
+            67.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:04:00 AM (Sunday)" class="hival">
-            67.3</span>
+          <span title="10:08:17 AM (Sunday)" class="hival">
+            67.8</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="01:40:12 AM">
-            54.3</span><br/>
+          <span title="10:05:43 AM">
+            54.5</span><br/>
           <span title="07:14:52 AM">
             46.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:40:12 AM (Sunday)">
-            54.3</span><br/>
+          <span title="10:05:43 AM (Sunday)">
+            54.5</span><br/>
           <span title="07:14:52 AM (Sunday)">
             46.9</span>
         </td>
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="06:15:22 AM">
             85</span><br/>
-          <span title="09:59:11 AM">
-            63</span>
+          <span title="10:06:01 AM">
+            62</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:15:22 AM (Sunday)">
             85</span><br/>
-          <span title="09:59:11 AM (Sunday)">
-            63</span>
+          <span title="10:06:01 AM (Sunday)">
+            62</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/14/2020 07:40:53 AM">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">64%</td>
+      <td class="data">56%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">0 days, 2 hours, 17 minutes</td>
+      <td class="data">0 days, 2 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">0 days, 2 hours, 17 minutes</td>
+      <td class="data">0 days, 2 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
