--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 10:14:00 AM</p>
+    <p class="lastupdate">09/20/2020 10:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">68.9&#176;F</td>
+        <td class="data">69.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">68.9&#176;F</td>
+        <td class="data">69.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">68.9&#176;F</td>
+        <td class="data">69.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -66,15 +66,15 @@
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">61%</td>
+        <td class="data">59%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.907 inHg (0.011)</td>
+        <td class="data">29.904 inHg (0.008)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.3&#176;F</td>
+        <td class="data">75.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:13:45 AM">
-            68.9</span><br/>
+          <span title="10:18:53 AM">
+            69.9</span><br/>
           <span title="07:14:52 AM">
             51.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:13:45 AM (Sunday)">
-            68.9</span><br/>
+          <span title="10:18:53 AM (Sunday)">
+            69.9</span><br/>
           <span title="07:14:52 AM (Sunday)">
             51.3</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:13:45 AM" class="hival">
-            68.9</span>
+          <span title="10:18:53 AM" class="hival">
+            69.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:13:45 AM (Sunday)" class="hival">
-            68.9</span>
+          <span title="10:18:53 AM (Sunday)" class="hival">
+            69.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="10:13:45 AM">
-            54.9</span><br/>
+          <span title="10:18:21 AM">
+            55.3</span><br/>
           <span title="07:14:52 AM">
             46.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:13:45 AM (Sunday)">
-            54.9</span><br/>
+          <span title="10:18:21 AM (Sunday)">
+            55.3</span><br/>
           <span title="07:14:52 AM (Sunday)">
             46.9</span>
         </td>
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="06:15:22 AM">
             85</span><br/>
-          <span title="10:11:49 AM">
-            61</span>
+          <span title="10:18:49 AM">
+            59</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:15:22 AM (Sunday)">
             85</span><br/>
-          <span title="10:11:49 AM (Sunday)">
-            61</span>
+          <span title="10:18:49 AM (Sunday)">
+            59</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/14/2020 07:40:53 AM">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">60%</td>
+      <td class="data">56%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">0 days, 2 hours, 27 minutes</td>
+      <td class="data">0 days, 2 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">0 days, 2 hours, 27 minutes</td>
+      <td class="data">0 days, 2 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
